<resources>
    <string name="app_name">Ass1</string>
    <string name="welcome_to_our_app">Welcome to our app</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="TODO2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="choose_one_to_make_calculations_on">Choose one to make calculations on</string>
    <string name="triangle">Triangle</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account? Login!</string>
    <string name="register1">Register</string>
    <string name="access_level">access level</string>
</resources>