<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lara_Registrationactivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginBottom="51dp"
        android:background="@drawable/lara_tab_back"

        android:orientation="horizontal"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Health Care Plus"

        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InvalidId" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="309dp"
        android:layout_height="500dp"

        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        app:cardElevation="21dp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/register"
                android:textColor="@color/primary1"
                android:textSize="30sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/lara_edit_back"
                android:drawableStart="@drawable/outline_drive_file_rename_outline_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/primary1"
                android:hint="@string/name"
                android:paddingStart="10dp"
                android:textColor="@color/primary1" />

            <EditText
                android:id="@+id/emaiL"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/lara_edit_back"
                android:drawableStart="@drawable/outline_email_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/primary1"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:textColor="@color/primary1" />

            <EditText
                android:id="@+id/passworD"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/lara_edit_back"
                android:drawableStart="@drawable/outline_lock_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/primary1"
                android:hint="@string/password"
                android:paddingStart="10dp"
                android:textColor="@color/primary1"
                tools:ignore="DuplicateIds" />

            <EditText
                android:id="@+id/confirmpass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/lara_edit_back"
                android:drawableStart="@drawable/outline_bookmark_added_24"
                android:drawablePadding="10dp"
                android:drawableTint="@color/primary1"
                android:hint="@string/confirm_password"

                android:paddingStart="10dp"
                android:textColor="@color/primary1" />

            <TextView
                android:id="@+id/logintext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/already_have_an_account_login"
                android:textColor="@color/primary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/but_reg"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/lara_butt_back"
                android:text="@string/register1"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>